tests/covariance/covariance.exp
Error ------------------------------------------------------------------------------------------------------ test.js:2:8

Cannot instantiate `CovArrayVerbose` because string [1] is incompatible with number [2] in type argument `Y`.
[incompatible-type-arg]

   test.js:2:8
   2| var b: CovArrayVerbose<number,*> = [];
             ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:4:8
   4| y[0] = ""; // error
             ^^ [1]
   test.js:2:24
   2| var b: CovArrayVerbose<number,*> = [];
                             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:3:35

Cannot assign `b` to `y` because number [1] is incompatible with mixed [2] in type argument `X` [3].
[incompatible-type-arg]

   test.js:3:35
   3| var y: CovArrayVerbose<mixed,*> = b;
                                        ^

References:
   test.js:2:24
   2| var b: CovArrayVerbose<number,*> = [];
                             ^^^^^^ [1]
   test.js:3:24
   3| var y: CovArrayVerbose<mixed,*> = b;
                             ^^^^^ [2]
   test.js:1:22
   1| type CovArrayVerbose<X,Y:X> = Array<Y>;
                           ^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:8:46

Cannot return `this.x` because `E` [1] is incompatible with mixed [2] in type argument `X` [3]. [incompatible-return]

   test.js:8:46
   8|     foo(): CovArrayVerbose<mixed,I> { return this.x; }
                                                   ^^^^^^

References:
   test.js:7:24
   7|     x: CovArrayVerbose<E,I>;
                             ^ [1]
   test.js:8:28
   8|     foo(): CovArrayVerbose<mixed,I> { return this.x; }
                                 ^^^^^ [2]
   test.js:1:22
   1| type CovArrayVerbose<X,Y:X> = Array<Y>;
                           ^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:13:2

Cannot cast `nv.x[0]` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:13:2
   13| (nv.x[0]: string); // error
        ^^^^^^^

References:
   test.js:12:9
   12| nv.x = [0];
               ^ [1]
   test.js:13:11
   13| (nv.x[0]: string); // error
                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:2

Cannot cast `nv.foo()[0]` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:14:2
   14| (nv.foo()[0]: string); // error
        ^^^^^^^^^^^

References:
   test.js:12:9
   12| nv.x = [0];
               ^ [1]
   test.js:14:15
   14| (nv.foo()[0]: string); // error
                     ^^^^^^ [2]



Found 5 errors
